--- a/hallocasa-web/src/main/webapp/resources/css/header.css
+++ b/hallocasa-web/src/main/webapp/resources/css/header.css
@@ -280,10 +280,7 @@ div.hc-responsive-div {
 }
 
 div.hc-responsive-div-properties {
-	padding: 0 10px;
-	width: 200px;
 	height: 120px;
-	background-color: #ddd;
 }
 
 .login-btn {
